# truth-tables

./: CMakeLists.txt  README.md
include/: file_loader.hpp  logger.hpp  logical_operators.hpp  tree.hpp  truth_table.hpp
include/data/: product_expression.txt  sum_expression.txt  tremendo.txt  xor_expression.txt
src/: file_loader.cpp  logger.cpp  logical_operators.cpp  main.cpp  tree.cpp  truth_table.cpp
